// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots tests should display correctly 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    class="component container"
    role="combobox"
    tabindex="-1"
  >
    <button
      aria-controls="downshift-:r0:-menu"
      aria-labelledby="downshift-:r0:-label"
      class="component primary size-56 hug size-56 component primary component primary block withRightAddons customButton border white darkening disableType-default"
      id="downshift-:r0:-input"
      selectedmultiple=""
      style="background: rgb(255, 69, 195);"
      tabindex="0"
      type="button"
    >
      <span
        class="label"
      >
        <span
          for="downshift-:r0:-input"
          id="downshift-:r0:-label"
        >
          some label
        </span>
      </span>
      <span
        class="addons"
      >
        <span
          class="iconContainer"
        >
          <svg
            data-test-id="custom-picker-button-icon"
            fill="currentColor"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Snapshots tests should display correctly 2`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    class="component container"
    role="combobox"
    tabindex="-1"
  >
    <button
      aria-controls="downshift-:r4:-menu"
      aria-labelledby="downshift-:r4:-label"
      class="component primary size-56 hug size-56 component primary component primary block withRightAddons customButton border white darkening disableType-default"
      id="downshift-:r4:-input"
      selectedmultiple=""
      style="background: rgb(255, 69, 195);"
      tabindex="0"
      type="button"
    >
      <span
        class="label"
      >
        <span
          for="downshift-:r4:-input"
          id="downshift-:r4:-label"
        >
          some label
        </span>
      </span>
      <span
        class="addons"
      >
        <span
          class="iconContainer"
        >
          <svg
            data-test-id="custom-picker-button-icon"
            fill="currentColor"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Snapshots tests should display correctly 3`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    class="component"
    role="combobox"
    tabindex="-1"
  >
    <button
      aria-controls="downshift-:r8:-menu"
      aria-labelledby="downshift-:r8:-label"
      arrow="[object Object]"
      class="component primary size-56 hug size-56 component primary component primary block withRightAddons customButton border white darkening disableType-default"
      formcontrolcomponent="[object Object]"
      id="downshift-:r8:-input"
      selectedmultiple=""
      style="background: rgb(255, 69, 195);"
      tabindex="0"
      type="button"
    >
      <span
        class="label"
      >
        <span
          for="downshift-:r8:-input"
          id="downshift-:r8:-label"
        >
          some label
        </span>
      </span>
      <span
        class="addons"
      >
        <span
          class="iconContainer"
        >
          <svg
            data-test-id="custom-picker-button-icon"
            fill="currentColor"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Snapshots tests should display opened correctly 1`] = `
<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    class="component container"
    role="combobox"
    tabindex="-1"
  >
    <button
      aria-controls="downshift-:r3:-menu"
      aria-labelledby="downshift-:r3:-label"
      class="component primary size-56 hug size-56 component primary component primary block iconOnly customButton border white darkening disableType-default"
      id="downshift-:r3:-input"
      selectedmultiple=""
      style="background: rgb(255, 69, 195);"
      tabindex="0"
      type="button"
    >
      <span
        class="addons"
      >
        <span
          class="iconContainer open"
        >
          <svg
            data-test-id="custom-picker-button-icon"
            fill="currentColor"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Snapshots tests should display opened correctly 2`] = `
<div
  alfa-portal-container=""
>
  <div
    class="component"
    data-popper-escaped="true"
    data-popper-placement="bottom-start"
    data-popper-reference-hidden="true"
    style="z-index: 50; position: absolute; left: 0px; top: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="inner popoverInner cc-picker-button optionsPopover"
    >
      <div
        class=""
      >
        <div
          aria-labelledby="downshift-:r3:-label"
          class="optionsListWrapper"
          id="downshift-:r3:-menu"
          role="listbox"
          style="min-width: 0px;"
        >
          <div
            class="optionsList size-56"
          >
            <div
              class="scrollable"
              style="height: 0px;"
            >
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r3:-item-0"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Neptunium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r3:-item-1"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Plutonium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r3:-item-2"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Americium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r3:-item-3"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Curium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r3:-item-4"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Berkelium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r3:-item-5"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Californium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r3:-item-6"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Einsteinium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r3:-item-7"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Fermium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r3:-item-8"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Mendelevium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r3:-item-9"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Nobelium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r3:-item-10"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Lawrencium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r3:-item-11"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Rutherfordium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r3:-item-12"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Dubnium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r3:-item-13"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Seaborgium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r3:-item-14"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Bohrium
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="optionsListBorder"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshots tests should display opened correctly 3`] = `
<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    class="component container"
    role="combobox"
    tabindex="-1"
  >
    <button
      aria-controls="downshift-:r7:-menu"
      aria-labelledby="downshift-:r7:-label"
      class="component primary size-56 hug size-56 component primary component primary block iconOnly customButton border white darkening disableType-default"
      id="downshift-:r7:-input"
      selectedmultiple=""
      style="background: rgb(255, 69, 195);"
      tabindex="0"
      type="button"
    >
      <span
        class="addons"
      >
        <span
          class="iconContainer open"
        >
          <svg
            data-test-id="custom-picker-button-icon"
            fill="currentColor"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Snapshots tests should display opened correctly 4`] = `
<div
  alfa-portal-container=""
>
  <div
    class="component"
    data-popper-escaped="true"
    data-popper-placement="bottom-start"
    data-popper-reference-hidden="true"
    style="z-index: 50; position: absolute; left: 0px; top: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="inner popoverInner cc-picker-button optionsPopover"
    >
      <div
        class=""
      >
        <div
          aria-labelledby="downshift-:r7:-label"
          class="optionsListWrapper"
          id="downshift-:r7:-menu"
          role="listbox"
          style="min-width: 0px;"
        >
          <div
            class="optionsList size-56"
          >
            <div
              class="scrollable"
              style="height: 0px;"
            >
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r7:-item-0"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Neptunium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r7:-item-1"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Plutonium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r7:-item-2"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Americium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r7:-item-3"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Curium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r7:-item-4"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Berkelium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r7:-item-5"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Californium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r7:-item-6"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Einsteinium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r7:-item-7"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Fermium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r7:-item-8"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Mendelevium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r7:-item-9"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Nobelium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r7:-item-10"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Lawrencium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r7:-item-11"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Rutherfordium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r7:-item-12"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Dubnium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r7:-item-13"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Seaborgium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:r7:-item-14"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Bohrium
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="optionsListBorder"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshots tests should display opened correctly 5`] = `
<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    class="component container"
    role="combobox"
    tabindex="-1"
  >
    <button
      aria-controls="downshift-:rb:-menu"
      aria-labelledby="downshift-:rb:-label"
      class="component primary size-56 hug size-56 component primary component primary block iconOnly customButton border white darkening disableType-default"
      id="downshift-:rb:-input"
      selectedmultiple=""
      style="background: rgb(255, 69, 195);"
      tabindex="0"
      type="button"
    >
      <span
        class="addons"
      >
        <span
          class="iconContainer open"
        >
          <svg
            data-test-id="custom-picker-button-icon"
            fill="currentColor"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Snapshots tests should display opened correctly 6`] = `
<div
  alfa-portal-container=""
>
  <div
    class="component"
    data-popper-escaped="true"
    data-popper-placement="bottom-start"
    data-popper-reference-hidden="true"
    style="z-index: 50; position: absolute; left: 0px; top: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="inner popoverInner cc-picker-button optionsPopover"
    >
      <div
        class=""
      >
        <div
          aria-labelledby="downshift-:rb:-label"
          class="optionsListWrapper"
          id="downshift-:rb:-menu"
          role="listbox"
          style="min-width: 0px;"
        >
          <div
            class="optionsList size-56"
          >
            <div
              class="scrollable"
              style="height: 0px;"
            >
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:rb:-item-0"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Neptunium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:rb:-item-1"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Plutonium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:rb:-item-2"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Americium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:rb:-item-3"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Curium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:rb:-item-4"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Berkelium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:rb:-item-5"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Californium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:rb:-item-6"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Einsteinium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:rb:-item-7"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Fermium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:rb:-item-8"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Mendelevium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:rb:-item-9"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Nobelium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:rb:-item-10"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Lawrencium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:rb:-item-11"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Rutherfordium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:rb:-item-12"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Dubnium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:rb:-item-13"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Seaborgium
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="option size-56 option"
                id="downshift-:rb:-item-14"
                role="option"
              >
                <div
                  class="content"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="content"
                    >
                      Bohrium
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="optionsListBorder"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshots tests should render black color content 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      alfa-portal-container=""
    />
    <div>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="component container"
        role="combobox"
        tabindex="-1"
      >
        <button
          aria-controls="downshift-:r2:-menu"
          aria-labelledby="downshift-:r2:-label"
          class="component primary size-56 hug size-56 component primary component primary block withRightAddons customButton border black darkening disableType-default"
          id="downshift-:r2:-input"
          selectedmultiple=""
          style="background: rgb(255, 69, 195);"
          tabindex="0"
          type="button"
        >
          <span
            class="label"
          >
            <span
              for="downshift-:r2:-input"
              id="downshift-:r2:-label"
            >
              some label
            </span>
          </span>
          <span
            class="addons"
          >
            <span
              class="iconContainer"
            >
              <svg
                data-test-id="custom-picker-button-icon"
                fill="currentColor"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="component container"
      role="combobox"
      tabindex="-1"
    >
      <button
        aria-controls="downshift-:r2:-menu"
        aria-labelledby="downshift-:r2:-label"
        class="component primary size-56 hug size-56 component primary component primary block withRightAddons customButton border black darkening disableType-default"
        id="downshift-:r2:-input"
        selectedmultiple=""
        style="background: rgb(255, 69, 195);"
        tabindex="0"
        type="button"
      >
        <span
          class="label"
        >
          <span
            for="downshift-:r2:-input"
            id="downshift-:r2:-label"
          >
            some label
          </span>
        </span>
        <span
          class="addons"
        >
          <span
            class="iconContainer"
          >
            <svg
              data-test-id="custom-picker-button-icon"
              fill="currentColor"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshots tests should render black color content 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      alfa-portal-container=""
    />
    <div>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="component container"
        role="combobox"
        tabindex="-1"
      >
        <button
          aria-controls="downshift-:r6:-menu"
          aria-labelledby="downshift-:r6:-label"
          class="component primary size-56 hug size-56 component primary component primary block withRightAddons customButton border black darkening disableType-default"
          id="downshift-:r6:-input"
          selectedmultiple=""
          style="background: rgb(255, 69, 195);"
          tabindex="0"
          type="button"
        >
          <span
            class="label"
          >
            <span
              for="downshift-:r6:-input"
              id="downshift-:r6:-label"
            >
              some label
            </span>
          </span>
          <span
            class="addons"
          >
            <span
              class="iconContainer"
            >
              <svg
                data-test-id="custom-picker-button-icon"
                fill="currentColor"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="component container"
      role="combobox"
      tabindex="-1"
    >
      <button
        aria-controls="downshift-:r6:-menu"
        aria-labelledby="downshift-:r6:-label"
        class="component primary size-56 hug size-56 component primary component primary block withRightAddons customButton border black darkening disableType-default"
        id="downshift-:r6:-input"
        selectedmultiple=""
        style="background: rgb(255, 69, 195);"
        tabindex="0"
        type="button"
      >
        <span
          class="label"
        >
          <span
            for="downshift-:r6:-input"
            id="downshift-:r6:-label"
          >
            some label
          </span>
        </span>
        <span
          class="addons"
        >
          <span
            class="iconContainer"
          >
            <svg
              data-test-id="custom-picker-button-icon"
              fill="currentColor"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshots tests should render black color content 3`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      alfa-portal-container=""
    />
    <div>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="component"
        role="combobox"
        tabindex="-1"
      >
        <button
          aria-controls="downshift-:ra:-menu"
          aria-labelledby="downshift-:ra:-label"
          arrow="[object Object]"
          class="component primary size-56 hug size-56 component primary component primary block withRightAddons customButton border black darkening disableType-default"
          formcontrolcomponent="[object Object]"
          id="downshift-:ra:-input"
          selectedmultiple=""
          style="background: rgb(255, 69, 195);"
          tabindex="0"
          type="button"
        >
          <span
            class="label"
          >
            <span
              for="downshift-:ra:-input"
              id="downshift-:ra:-label"
            >
              some label
            </span>
          </span>
          <span
            class="addons"
          >
            <span
              class="iconContainer"
            >
              <svg
                data-test-id="custom-picker-button-icon"
                fill="currentColor"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="component"
      role="combobox"
      tabindex="-1"
    >
      <button
        aria-controls="downshift-:ra:-menu"
        aria-labelledby="downshift-:ra:-label"
        arrow="[object Object]"
        class="component primary size-56 hug size-56 component primary component primary block withRightAddons customButton border black darkening disableType-default"
        formcontrolcomponent="[object Object]"
        id="downshift-:ra:-input"
        selectedmultiple=""
        style="background: rgb(255, 69, 195);"
        tabindex="0"
        type="button"
      >
        <span
          class="label"
        >
          <span
            for="downshift-:ra:-input"
            id="downshift-:ra:-label"
          >
            some label
          </span>
        </span>
        <span
          class="addons"
        >
          <span
            class="iconContainer"
          >
            <svg
              data-test-id="custom-picker-button-icon"
              fill="currentColor"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshots tests should render custom background color 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      alfa-portal-container=""
    />
    <div>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="component container"
        role="combobox"
        tabindex="-1"
      >
        <button
          aria-controls="downshift-:r1:-menu"
          aria-labelledby="downshift-:r1:-label"
          class="component primary size-56 hug size-56 component primary component primary block withRightAddons customButton border white darkening disableType-default"
          id="downshift-:r1:-input"
          selectedmultiple=""
          style="background: rgb(0, 255, 0);"
          tabindex="0"
          type="button"
        >
          <span
            class="label"
          >
            <span
              for="downshift-:r1:-input"
              id="downshift-:r1:-label"
            >
              some label
            </span>
          </span>
          <span
            class="addons"
          >
            <span
              class="iconContainer"
            >
              <svg
                data-test-id="custom-picker-button-icon"
                fill="currentColor"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="component container"
      role="combobox"
      tabindex="-1"
    >
      <button
        aria-controls="downshift-:r1:-menu"
        aria-labelledby="downshift-:r1:-label"
        class="component primary size-56 hug size-56 component primary component primary block withRightAddons customButton border white darkening disableType-default"
        id="downshift-:r1:-input"
        selectedmultiple=""
        style="background: rgb(0, 255, 0);"
        tabindex="0"
        type="button"
      >
        <span
          class="label"
        >
          <span
            for="downshift-:r1:-input"
            id="downshift-:r1:-label"
          >
            some label
          </span>
        </span>
        <span
          class="addons"
        >
          <span
            class="iconContainer"
          >
            <svg
              data-test-id="custom-picker-button-icon"
              fill="currentColor"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshots tests should render custom background color 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      alfa-portal-container=""
    />
    <div>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="component container"
        role="combobox"
        tabindex="-1"
      >
        <button
          aria-controls="downshift-:r5:-menu"
          aria-labelledby="downshift-:r5:-label"
          class="component primary size-56 hug size-56 component primary component primary block withRightAddons customButton border white darkening disableType-default"
          id="downshift-:r5:-input"
          selectedmultiple=""
          style="background: rgb(0, 255, 0);"
          tabindex="0"
          type="button"
        >
          <span
            class="label"
          >
            <span
              for="downshift-:r5:-input"
              id="downshift-:r5:-label"
            >
              some label
            </span>
          </span>
          <span
            class="addons"
          >
            <span
              class="iconContainer"
            >
              <svg
                data-test-id="custom-picker-button-icon"
                fill="currentColor"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="component container"
      role="combobox"
      tabindex="-1"
    >
      <button
        aria-controls="downshift-:r5:-menu"
        aria-labelledby="downshift-:r5:-label"
        class="component primary size-56 hug size-56 component primary component primary block withRightAddons customButton border white darkening disableType-default"
        id="downshift-:r5:-input"
        selectedmultiple=""
        style="background: rgb(0, 255, 0);"
        tabindex="0"
        type="button"
      >
        <span
          class="label"
        >
          <span
            for="downshift-:r5:-input"
            id="downshift-:r5:-label"
          >
            some label
          </span>
        </span>
        <span
          class="addons"
        >
          <span
            class="iconContainer"
          >
            <svg
              data-test-id="custom-picker-button-icon"
              fill="currentColor"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshots tests should render custom background color 3`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      alfa-portal-container=""
    />
    <div>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="component"
        role="combobox"
        tabindex="-1"
      >
        <button
          aria-controls="downshift-:r9:-menu"
          aria-labelledby="downshift-:r9:-label"
          arrow="[object Object]"
          class="component primary size-56 hug size-56 component primary component primary block withRightAddons customButton border white darkening disableType-default"
          formcontrolcomponent="[object Object]"
          id="downshift-:r9:-input"
          selectedmultiple=""
          style="background: rgb(0, 255, 0);"
          tabindex="0"
          type="button"
        >
          <span
            class="label"
          >
            <span
              for="downshift-:r9:-input"
              id="downshift-:r9:-label"
            >
              some label
            </span>
          </span>
          <span
            class="addons"
          >
            <span
              class="iconContainer"
            >
              <svg
                data-test-id="custom-picker-button-icon"
                fill="currentColor"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="component"
      role="combobox"
      tabindex="-1"
    >
      <button
        aria-controls="downshift-:r9:-menu"
        aria-labelledby="downshift-:r9:-label"
        arrow="[object Object]"
        class="component primary size-56 hug size-56 component primary component primary block withRightAddons customButton border white darkening disableType-default"
        formcontrolcomponent="[object Object]"
        id="downshift-:r9:-input"
        selectedmultiple=""
        style="background: rgb(0, 255, 0);"
        tabindex="0"
        type="button"
      >
        <span
          class="label"
        >
          <span
            for="downshift-:r9:-input"
            id="downshift-:r9:-label"
          >
            some label
          </span>
        </span>
        <span
          class="addons"
        >
          <span
            class="iconContainer"
          >
            <svg
              data-test-id="custom-picker-button-icon"
              fill="currentColor"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M12 14L6.5 8.5 5 10l7 7 7-7-1.5-1.5L12 14z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
